# rust-template

./: .editorconfig  .markdownlintignore  README.md  demo.apng
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  reusable-audit.yml  reusable-cd.yml  reusable-ci.yml
template/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.bin.toml  Cargo.lib.toml  Cargo.toml  LICENSE-MIT  README.md  README.tpl  about.hbs  about.toml  cargo-generate.toml  codecov.yml  deny.toml  justfile  justfile.lib  post-script.rhai  release.bin.toml  release.lib.toml  release.toml
template/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
template/.github/ISSUE_TEMPLATE/: bug_report.md
template/.github/workflows/: audit.yml  bin-cd.yml  bin-ci.yml  cd.yml  ci.yml  dependabot-auto-merge.yml  lib-cd.yml  lib-ci.yml
template/scripts/: build-dist
template/src/: lib.rs  main.rs
template/xtask/: Cargo.toml  README.md
template/xtask/src/: build_completion.rs  build_doc.rs  build_exe.rs  build_license.rs  build_man.rs  dist.rs  iter.rs  main.rs  metadata.rs  util.rs
tests/: .gitignore  template_values.toml  test
tests/scripts/: run_cargo_tests  update_repo
