{% if crate_type == "bin" -%}
[workspace]
members = ["xtask"]
{% endif %}
[package]
name = "{{project-name}}"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "{{rust-version}}"
description = "{{project-description}}"
readme = "README.md"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{% if crate_type == "bin" -%}
clap = { version = "3.2.16", features = ["derive"] }
{% endif %}
[dev-dependencies]
{% if crate_type == "lib" -%}
cargo-readme = "3.2.0"
{% endif %}
[build-dependencies]

[profile.dev]

[profile.release]
{% if crate_type == "bin" -%}
strip = true
{% endif %}
[badges]
maintenance = { status = "{{maintenance-status}}" }
