[workspace]
members = ["xtask"]

[package]
name = "{{project-name}}"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "{{rust-version}}"
description = "{{project-description}}"
readme = "README.md"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

{% if crate_type == "bin" -%}
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
{% endif %}
[dependencies]
{% if crate_type == "bin" -%}
clap = { version = "3.2.17", features = ["derive"] }
{% endif %}
[dev-dependencies]
[build-dependencies]

[profile.dev]

[profile.release]
{% if crate_type == "bin" -%}
strip = true
{% endif %}
[badges]
maintenance = { status = "{{maintenance-status}}" }
