[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "{{ edition }}"
rust-version = "{{ rust-version }}"
description = "{{ project-description }}"
readme = "README.md"
repository = "https://github.com/{{ gh-username }}/{{ project-name }}"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
crates-io = true
{%- if crate_type == "lib" %}
docs-rs = true
{%- endif %}
rust-version = true
github-actions = { workflows = "ci.yml" }
codecov = true
{% if crate_type == "bin" -%}

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
{% endif %}
[dependencies]
{% if crate_type == "bin" -%}
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_complete_nushell = "4.6"
clap_mangen = "0.3"

{% endif -%}
[dev-dependencies]
[build-dependencies]

[profile.dev]

[profile.release]
{% if crate_type == "bin" -%}
strip = true
{% endif %}
[badges]
maintenance = { status = "{{ maintenance-status }}" }
