[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.15.0"
clap = { version = "3.2.16", features = ["derive"] }
clap_mangen = "0.1.10"
color-eyre = "0.6.2"
flate2 = "1.0.24"
once_cell = "1.13.0"
{{ project-name }} = { path = ".." }
tar = "0.4.38"
time = { version = "0.3.13", features = ["formatting"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
