[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-xtask = { version = "0.8", features = ["{{ crate_type }}-crate", "{{ crate_type }}-crate-extra", "main"] }
{% if crate_type == "bin" -%}
{{ project-name }} = { path = ".." }
{%- endif %}
